--- a/Listen and CatchUp/Assembly-CSharp.csproj
+++ b/Listen and CatchUp/Assembly-CSharp.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Assets\__LOGIC\Scripts\Gameplay\WordManager.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Interface\AnimationManager.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Interface\GameOverWindow.cs" />
+    <Compile Include="Assets\__LOGIC\Scripts\Interface\IngameInterface.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Interface\MenuCube.cs" />
+    <Compile Include="Assets\__LOGIC\Scripts\Interface\SpriteButton.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Networking\GameSparksConnection.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Utils\CoroutineExecutor.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Utils\Score.cs" />
@@ -340,11 +342,8 @@
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.2.9f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.StandardEvents">
-      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.13/UnityEngine.StandardEvents.dll</HintPath>
+    <Reference Include="BouncyCastle_GameSparks">
+      <HintPath>C:/Users/joe/Documents/UnityProjects/Listen-Catch-Up/Listen and CatchUp/Assets/_EXTENSIONS/GameSparks/Plugins/BouncyCastle_GameSparks.dll</HintPath>
     </Reference>
     <Reference Include="GameSparks.Api">
       <HintPath>C:/Users/joe/Documents/UnityProjects/Listen-Catch-Up/Listen and CatchUp/Assets/_EXTENSIONS/GameSparks/Plugins/GameSparks.Api.dll</HintPath>
@@ -352,11 +351,14 @@
     <Reference Include="GameSparks">
       <HintPath>C:/Users/joe/Documents/UnityProjects/Listen-Catch-Up/Listen and CatchUp/Assets/_EXTENSIONS/GameSparks/Plugins/GameSparks.dll</HintPath>
     </Reference>
-    <Reference Include="BouncyCastle_GameSparks">
-      <HintPath>C:/Users/joe/Documents/UnityProjects/Listen-Catch-Up/Listen and CatchUp/Assets/_EXTENSIONS/GameSparks/Plugins/BouncyCastle_GameSparks.dll</HintPath>
-    </Reference>
     <Reference Include="GameSparksRT">
       <HintPath>C:/Users/joe/Documents/UnityProjects/Listen-Catch-Up/Listen and CatchUp/Assets/_EXTENSIONS/GameSparks/Plugins/GameSparksRT.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Analytics">
+      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.StandardEvents">
+      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.13/UnityEngine.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.2.9f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
