--- a/Listen and CatchUp/Assembly-CSharp.csproj
+++ b/Listen and CatchUp/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\__LOGIC\Scripts\Gameplay\WordGrid.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Gameplay\WordManager.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Interface\AnimationManager.cs" />
+    <Compile Include="Assets\__LOGIC\Scripts\Interface\CreditsWindow.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Interface\GameOverWindow.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Interface\GameWindow.cs" />
     <Compile Include="Assets\__LOGIC\Scripts\Interface\IngameInterface.cs" />
@@ -347,11 +348,8 @@
     <Reference Include="UnityEngine.SpatialTracking">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.2.9f1/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.StandardEvents">
-      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.13/UnityEngine.StandardEvents.dll</HintPath>
+    <Reference Include="BouncyCastle_GameSparks">
+      <HintPath>C:/Users/joe/Documents/UnityProjects/Listen and Catch Up/Listen and CatchUp/Assets/_DEPENDENCIES/CEGI Common Assets/_EXTENSIONS/GameSparks/Plugins/BouncyCastle_GameSparks.dll</HintPath>
     </Reference>
     <Reference Include="GameSparks.Api">
       <HintPath>C:/Users/joe/Documents/UnityProjects/Listen and Catch Up/Listen and CatchUp/Assets/_DEPENDENCIES/CEGI Common Assets/_EXTENSIONS/GameSparks/Plugins/GameSparks.Api.dll</HintPath>
@@ -359,14 +357,17 @@
     <Reference Include="GameSparks">
       <HintPath>C:/Users/joe/Documents/UnityProjects/Listen and Catch Up/Listen and CatchUp/Assets/_DEPENDENCIES/CEGI Common Assets/_EXTENSIONS/GameSparks/Plugins/GameSparks.dll</HintPath>
     </Reference>
-    <Reference Include="BouncyCastle_GameSparks">
-      <HintPath>C:/Users/joe/Documents/UnityProjects/Listen and Catch Up/Listen and CatchUp/Assets/_DEPENDENCIES/CEGI Common Assets/_EXTENSIONS/GameSparks/Plugins/BouncyCastle_GameSparks.dll</HintPath>
-    </Reference>
     <Reference Include="GameSparksRT">
       <HintPath>C:/Users/joe/Documents/UnityProjects/Listen and Catch Up/Listen and CatchUp/Assets/_DEPENDENCIES/CEGI Common Assets/_EXTENSIONS/GameSparks/Plugins/GameSparksRT.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>C:/Users/joe/Documents/UnityProjects/Listen and Catch Up/Listen and CatchUp/Assets/_DEPENDENCIES/CEGI Common Assets/_EXTENSIONS/JsonDotNet/Assemblies/Standalone/Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Analytics">
+      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.StandardEvents">
+      <HintPath>C:/Users/joe/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.13/UnityEngine.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.2.9f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
